resources/sass/banner.scss
.popup-banner{
  position: fixed;
  z-index: 3;
  background: rgba(0, 0, 0, 0.8);
  top:0px;
  width: 100%;
  height: 100%;
  text-align: center;
  padding-top: 60px;
  img{
    box-shadow: 0 10px 25px rgba(0, 0, 0, 0.5);
    position: relative;
    background: #f9f9f9;
    color: #444;
    text-shadow: none;
    -webkit-border-radius: 4px;
    -moz-border-radius: 4px;
    border-radius: 4px;
    border: #f9f9f9 solid 10px;
  }
}

